[gd_scene load_steps=3 format=3 uid="uid://dculbgkisxgmq"]

[ext_resource type="Script" uid="uid://cwq1fet0mq2br" path="res://Hand/Hand.gd" id="1_us0oc"]
[ext_resource type="PackedScene" uid="uid://c2n7f34xdy4e2" path="res://Hand/Slot.tscn" id="2_hk34u"]

[node name="HandMargin" type="MarginContainer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -752.0
offset_right = 752.0
offset_bottom = 361.0
grow_horizontal = 2
size_flags_horizontal = 3
script = ExtResource("1_us0oc")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="CardContainer" type="HBoxContainer" parent="HBoxContainer/PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="SlotMargin" type="MarginContainer" parent="HBoxContainer/PanelContainer/MarginContainer/CardContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/PanelContainer/MarginContainer/CardContainer/SlotMargin"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 20

[node name="SlotDash" parent="HBoxContainer/PanelContainer/MarginContainer/CardContainer/SlotMargin/HBoxContainer" instance=ExtResource("2_hk34u")]
layout_mode = 2

[node name="SlotDashContainer" type="MarginContainer" parent="HBoxContainer/PanelContainer/MarginContainer/CardContainer/SlotMargin/HBoxContainer/SlotDash"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SlotAttack" parent="HBoxContainer/PanelContainer/MarginContainer/CardContainer/SlotMargin/HBoxContainer" instance=ExtResource("2_hk34u")]
layout_mode = 2
typeSlot = "ATTACK"

[node name="SlotAttackContainer" type="MarginContainer" parent="HBoxContainer/PanelContainer/MarginContainer/CardContainer/SlotMargin/HBoxContainer/SlotAttack"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SlotSpell" parent="HBoxContainer/PanelContainer/MarginContainer/CardContainer/SlotMargin/HBoxContainer" instance=ExtResource("2_hk34u")]
layout_mode = 2
typeSlot = "SPELL"

[node name="SlotSpellContainer" type="MarginContainer" parent="HBoxContainer/PanelContainer/MarginContainer/CardContainer/SlotMargin/HBoxContainer/SlotSpell"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="child_exiting_tree" from="HBoxContainer/PanelContainer/MarginContainer/CardContainer/SlotMargin" to="." method="_on_slot_margin_child_exiting_tree"]
[connection signal="child_exiting_tree" from="HBoxContainer/PanelContainer/MarginContainer/CardContainer/SlotMargin/HBoxContainer/SlotDash/SlotDashContainer" to="." method="_on_slot_dash_container_child_exiting_tree"]
[connection signal="child_exiting_tree" from="HBoxContainer/PanelContainer/MarginContainer/CardContainer/SlotMargin/HBoxContainer/SlotAttack/SlotAttackContainer" to="." method="_on_slot_attack_container_child_exiting_tree"]
[connection signal="child_exiting_tree" from="HBoxContainer/PanelContainer/MarginContainer/CardContainer/SlotMargin/HBoxContainer/SlotSpell/SlotSpellContainer" to="." method="_on_slot_spell_container_child_exiting_tree"]
